# aws-cost-slack-reporter

./: .gitignore  README.md  deploy.sh  env.example  install.sh  pyproject.toml  pytest.ini  response.json  run_tests.sh  setup_env.py
docs/: Step1. 2025-07-15.md
src/: __init__.py  chart_generator.py  cost_explorer.py  exchange_rate.py  holiday_checker.py  lambda_function.py  slack_utils.py
tests/: conftest.py  test_exchange_rate.py  test_holiday_checker.py  test_integration.py  test_lambda_function.py
